# bash-scripts

./: .gitignore  README.md  bs-config.js  commands.sh  commands.zsh  db.sqlite3  framework_config.sh  install.sh  main.py  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  taskmanager.sh  websocket.sh
bashpanel/: asgi.py  logger_init.py  settings.py  urls.py  wsgi.py
static/: index.html  scripts.js  styles.css
static/src/: colors.css  styles.css
templates/: base copy.html  base.html  index.html
templates/includes/: cursor.html  cursorjs.html  favicon.html
templates/pages/: commands.html  commandset.html  environment_variables.html  scenario.html  tasks.html  terminals.html
templates/pages/includes/: commandset_list.html  commandset_styles.html  scenario_list.html
templates/plugins/: humanhead.html
terminals/: admin.py  consumers.py  filters.py  models.py  routing.py  serializers.py  urls.py  views.py
terminals/migrations/: 0001_initial.py  0002_command_created_command_updated_task_created_and_more.py  0003_commandset_space_folder.py  0004_remove_commandset_commands_and_more.py  0005_commandset_commands.py  0006_alter_task_commands.py  0007_alter_task_commands.py  0008_environmentvariable.py  0009_scenario_scenariocommandsetorder_and_more.py  0010_commandsetvariable.py  0011_alter_scenario_command_sets_and_more.py  0012_alter_scenario_command_sets_and_more.py
